# str_mlops

./: Project_description.py  README.md  pyproject.toml  requirements.txt
models/: model.pkl
pages/: 1_What_if_Prediction.py  2_File_Prediction.py
