[tool.poetry]
name = "str-mlops"
version = "0.1.0"
description = "Deploy do Modelo no Streamlit"
authors = ["LucasJFaust <lucasjfm.eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
scikit-learn = "1.2.1"
streamlit = "1.17.0"
pandas = "1.5.3"
altair = "4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
